Role/Restore/Secrets|Refactor: create the password file in the same directory as where the original restic profile config file is

--- a/backup/profiles.yaml
+++ b/backup/profiles.yaml
@@ -19,7 +19,7 @@ groups:
 
 ## Configuration profiles
 default:
-  password-file: /home/diego/.config/resticprofile/restic_password.txt
+  password-file: "{{ .ConfigDir }}/.resticprofile_key"
 
   env:
     AWS_SECRET_ACCESS_KEY: "{{ .Env.AWS_SECRET_ACCESS_KEY }}"
