Docker/Envs|Refactor: made the username into an environment variable

--- a/services/cloud_management.yml
+++ b/services/cloud_management.yml
@@ -11,8 +11,8 @@ services:
       - MYSQL_PASSWORD=dbpassword
       - MYSQL_HOST=nextcloud_mariadb
     volumes:
-      - /home/diego/services_data/nextcloud/config:/config
-      - /home/diego/services_data/nextcloud/themes:/themes
+      - /home/${USERNAME}/services_data/nextcloud/config:/config
+      - /home/${USERNAME}/services_data/nextcloud/themes:/themes
       - /media/hd1/nextcloud:/data
     depends_on:
       - nextcloud_mariadb
