--- a/roles/services/tasks/compose.yml
+++ b/roles/services/tasks/compose.yml
@@ -1,6 +1,7 @@
 ---
 - name: Pull and start docker compose services
   environment:
+    USERNAME: "{{ username }}"
     NGINX_TAILSCALE_AUTHKEY: "{{ services_nginx_tailscale_authkey }}"
     HOMARR_SECRET_ENCRYPTION_KEY: "{{ services_homarr_secret_encryption_key }}"
     MONGODB_TAILSCALE_AUTHKEY: "{{ services_mongodb_tailscale_authkey }}"
