Variables/Username|Refactor: standardized usage of the `username` variable

--- a/molecule/development/molecule.yml
+++ b/molecule/development/molecule.yml
@@ -17,6 +17,10 @@ platforms:
 
 provisioner:
   name: ansible
+  inventory:
+    group_vars:
+      all:
+        username: test_user
   env:
     ANSIBLE_CONFIG: ../../ansible.cfg
 
