--- a/inventory.yml
+++ b/inventory.yml
@@ -9,3 +9,5 @@ home_lab:
       ansible_user: diego
       ansible_connection: ssh
       ansible_ssh_private_key_file: /home/diego/.ssh/id_ed25519
+  vars:
+    username: diego
