--- a/services/media.yml
+++ b/services/media.yml
@@ -81,3 +81,15 @@ services:
       - /home/${USERNAME}/services_data/radarr/config:/config
       - /media/hd1/media/movies:/data/movies
       - /media/hd1/downloads/data/completed:/data/completed
+
+  bazarr:
+    container_name: bazarr
+    image: lscr.io/linuxserver/bazarr:1.5.1
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/Amsterdam
+    volumes:
+      - /home/${USERNAME}/services_data/bazarr/config:/config
+      - /media/hd1/media/movies:/movies
+      - /media/hd1/media/tvshows:/tv
