--- a/services/cloud_management.yml
+++ b/services/cloud_management.yml
@@ -15,7 +15,14 @@ services:
       - /home/${USERNAME}/services_data/nextcloud/themes:/themes
       - /media/hd1/nextcloud:/data
     depends_on:
-      - nextcloud_mariadb
+      nextcloud_mariadb:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost/status.php"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 20s
 
   nextcloud_mariadb:
     image: mariadb
@@ -29,6 +36,12 @@ services:
       - MYSQL_PASSWORD=dbpassword
       - MYSQL_DATABASE=nextcloud
       - MYSQL_USER=nextcloud
+    healthcheck:
+      test: ["CMD", "healthcheck.sh", "--connect", "--innodb_initialized"]
+      start_period: 10s
+      interval: 10s
+      timeout: 5s
+      retries: 3
 
 volumes:
   nextcloud-db:
