--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -75,3 +75,9 @@ services:
       timeout: 10s
       retries: 3
       start_period: 10s
+
+  glance:
+    container_name: glance
+    image: glanceapp/glance:v0.7.3
+    volumes:
+      - /home/${USERNAME}/services_data/glance/config:/app/config
