--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -81,3 +81,4 @@ services:
     image: glanceapp/glance:v0.7.3
     volumes:
       - /home/${USERNAME}/services_data/glance/config:/app/config
+      - /var/run/docker.sock:/var/run/docker.sock
