--- a/services/tools.yml
+++ b/services/tools.yml
@@ -11,6 +11,13 @@ services:
       timeout: 5s
       retries: 5
 
+  cup:
+    container_name: cup
+    image: ghcr.io/sergi0g/cup:latest
+    command: serve -p 9000
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+
   it-tools:
     container_name: it-tools
     image: corentinth/it-tools:latest
