Services/Tools|Add: included Home Assistant service

--- a/services/tools.yml
+++ b/services/tools.yml
@@ -72,3 +72,13 @@ services:
         - PORT=9999
     volumes:
         - /home/${USERNAME}/services_data/glance/persist:/persist
+
+  homeassistant:
+    container_name: homeassistant
+    image: ghcr.io/home-assistant/home-assistant:stable
+    volumes:
+      - /home/${USERNAME}/services_data/homeassistant/config:/config
+      - /etc/localtime:/etc/localtime:ro
+      - /run/dbus:/run/dbus:ro
+    privileged: true
+    network_mode: host
