--- a/services/tools.yml
+++ b/services/tools.yml
@@ -73,12 +73,21 @@ services:
     volumes:
         - /home/${USERNAME}/services_data/glance/persist:/persist
 
-  homeassistant:
-    container_name: homeassistant
-    image: ghcr.io/home-assistant/home-assistant:stable
+  ntfy:
+    container_name: ntfy
+    image: binwiederhier/ntfy:v2.12
+    command:
+      - serve
+    environment:
+      - TZ=Europe/Amsterdam
     volumes:
-      - /home/${USERNAME}/services_data/homeassistant/config:/config
-      - /etc/localtime:/etc/localtime:ro
-      - /run/dbus:/run/dbus:ro
-    privileged: true
-    network_mode: host
+      - /var/cache/ntfy:/var/cache/ntfy
+      - /home/${USERNAME}/services_data/ntfy:/etc/ntfy
+    healthcheck:
+        test: ["CMD-SHELL", "wget -q --tries=1 http://localhost:80/v1/health -O - | grep -Eo '\"healthy\"\\s*:\\s*true' || exit 1"]
+        interval: 60s
+        timeout: 10s
+        retries: 3
+        start_period: 40s
+    restart: unless-stopped
+
