Services|Update: updated main docker compose file with links to personal projects docker compose files

--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -5,9 +5,9 @@ include:
   - databases.yml
   - cloud_management.yml
   - tools.yml
-  - personal.yml
-  - ai.yml
   - home_assistant.yml
+  - financial_organizer.yml
+  - money_metrics.yml
 
 networks:
   default:
