--- a/services/home_assistant.yml
+++ b/services/home_assistant.yml
@@ -8,3 +8,9 @@ services:
       - /run/dbus:/run/dbus:ro
     privileged: true
     network_mode: host
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8123"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
