--- a/services/tools.yml
+++ b/services/tools.yml
@@ -120,3 +120,7 @@ services:
     environment:
       - DATABASE_PATH=/data/portracker.db
       - PORT=4999
+
+  mazanoke:
+    container_name: mazanoke
+    image: ghcr.io/civilblur/mazanoke:latest
