--- a/services/home_assistant/docker-compose.yaml
+++ b/services/home_assistant/docker-compose.yaml
@@ -14,3 +14,9 @@ services:
       timeout: 10s
       retries: 5
       start_period: 30s
+
+
+networks:
+  default:
+    external: true
+    name: home_server_network
