--- a/services/storage/docker-compose.yaml
+++ b/services/storage/docker-compose.yaml
@@ -43,5 +43,33 @@ services:
       timeout: 5s
       retries: 3
 
+  # https://www.reddit.com/r/selfhosted/comments/1eo7knj/guide_obsidian_with_free_selfhosted_instant_sync/
+  obsidian-livesync:
+    container_name: obsidian-livesync
+    image: couchdb:3.4.3
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - UMASK=0022
+      - TZ=Europe/Amsterdam
+      - COUCHDB_USER=obsidian
+      - COUCHDB_PASSWORD=obsidian
+    volumes:
+      - /home/${USERNAME}/services_data/obsidian-livesync/data:/opt/couchdb/data
+      - /home/${USERNAME}/services_data/obsidian-livesync/etc/local.d:/opt/couchdb/etc/local.d
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://obsidian:obsidian@localhost:5984/_up"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 15s
+
+
 volumes:
   nextcloud-db:
+
+networks:
+  default:
+    external: true
+    name: home_server_network
