--- a/services/tools/docker-compose.yaml
+++ b/services/tools/docker-compose.yaml
@@ -100,6 +100,12 @@ services:
       - N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
       - TZ=Europe/Amsterdam
       - GENERIC_TIMEZONE=Europe/Amsterdam
+    healthcheck:
+      test: wget --spider http://localhost:5678/healthz > /dev/null 2>&1 || exit 1
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
 
   docuseal:
     container_name: docuseal
