--- a/services/media/docker-compose.yaml
+++ b/services/media/docker-compose.yaml
@@ -65,8 +65,6 @@ services:
       retries: 3
       start_period: 20s
 
-  
-
   prowlarr:
     container_name: prowlarr
     image: linuxserver/prowlarr:1.34.1
@@ -119,6 +117,14 @@ services:
       timeout: 10s
       retries: 3
       start_period: 20s
+
+  navidrome:
+    container_name: navidrome
+    image: deluan/navidrome:0.58.0
+    user: 1000:1000
+    volumes:
+      - /home/${USERNAME}/services_data/navidrome:/data
+      - /media/hd1/media/music:/music:ro
 
 
 networks:
