Services/Tools|Add: included ConvertX as tool for converting multiple files to different file formats

--- a/services/tools/docker-compose.yaml
+++ b/services/tools/docker-compose.yaml
@@ -115,6 +115,12 @@ services:
     volumes:
       - /home/${USERNAME}/services_data/docuseal:/data
 
+  convertx:
+    container_name: convertx
+    image: ghcr.io/c4illin/convertx:latest
+    volumes:
+      - /home/${USERNAME}/services_data/convertx:/app/data
+
 networks:
   default:
     external: true
